fix broken css

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,12 +13,12 @@ body  {
 }
 .header--secondary {
   font-weight: 300;
-  font-size: 42;
+  font-size: 42px;
   color: #ffffff;
 }
 .header--sub {
-  font-size: 21;
-  color: ##6c7373;
+  font-size: 21px;
+  color: #6c7373;
 }
 /* LINKS */
 
